--- a/src/app/pieces/role/role.component.scss
+++ b/src/app/pieces/role/role.component.scss
@@ -178,17 +178,98 @@
             display: flex;
             flex-direction: column;
 
+            button {
+                position: relative;
+                width: 50px;
+                height: 50px;
+                background-color: white;
+                left: 100%;
+                transform: translateX(-100%);
+                border-radius: 10px;
+                margin-bottom: 5px;
+
+                mat-icon {
+                    transform: scale(1.3);
+                }
+            }
+
             &-reward {
                 display: flex;
-                flex-direction: row;
-                justify-content: space-between;
+                flex-direction: column;
 
                 select {
                     height: 50px;
                     border: none;
                     border-radius: 10px;
                     background-color: white;
-                    width: 80%;
+                    width: 100%;
+                }
+
+                input[type="number"] {
+                    width: 15%;
+                }
+
+                input[type="text"] {
+                    width: 100%;
+                }
+
+                &-type {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    margin-bottom: 5px;
+
+                    select {
+                        width: 80%;
+                    }
+                }
+
+                &-objects {
+                    display: flex;
+                    flex-direction: column;
+
+                    &-object {
+                        display: flex;
+                        flex-direction: row;
+                        margin-bottom: 5px;
+                        
+                        input[type="text"] {
+                            margin-left: 5px;
+                        }
+                    }
+                }
+
+                &-character {
+                    display: flex;
+                    flex-direction: row;
+                    margin-bottom: 5px;
+                }
+
+                &-discussion {
+                    display: flex;
+                    flex-direction: row;
+                    margin-bottom: 5px;
+                }
+
+                &-skill {
+                    display: flex;
+                    flex-direction: row;
+                    margin-bottom: 5px;
+                    
+                    select {
+                        margin-left: 5px;
+                    }
+                }
+
+                &-quest {
+                    display: flex;
+                    flex-direction: row;
+                    margin-bottom: 5px;
+                }
+
+                &-objective {
+                    display: flex;
+                    flex-direction: row;
                 }
             }
         }
