--- a/src/app/pieces/role/role.component.html
+++ b/src/app/pieces/role/role.component.html
@@ -118,28 +118,34 @@
             <button mat-button><mat-icon fontIcon="add"></mat-icon></button>
         </div>
 
-        
+        <div class="piece-form-title">Rôle supplémentaire</div>
         <div class="piece-form-supplementary">
-            <div class="piece-form-title">Rôle supplémentaire</div>
-            <div>
-                <div class="piece-form-supplementary-name">
-                    <label for="name">Nom</label>
-                    <input name="name" type="text"/>
-                </div>
-                <div class="piece-form-supplementary-textarea">
-                    <label for="objectives">Objectifs</label>
-                    <textarea name="objectives"></textarea>
-                </div>
-                <div class="piece-form-supplementary-textarea">
-                    <label for="skills">Compétences</label>
-                    <textarea name="skills"></textarea>
-                </div>
-                <div class="piece-form-supplementary-textarea">
-                    <label for="rules">Règles</label>
-                    <textarea nam="rules"></textarea>
+            <div class="piece-form-supplementary-form">
+                <div>
+                    <div class="piece-form-supplementary-form-name">
+                        <label for="name">Nom</label>
+                        <input name="name" type="text"/>
+                    </div>
+                    <div class="piece-form-supplementary-form-textarea">
+                        <label for="objectives">Objectifs</label>
+                        <textarea name="objectives"></textarea>
+                    </div>
+                    <div class="piece-form-supplementary-form-textarea">
+                        <label for="skills">Compétences</label>
+                        <textarea name="skills"></textarea>
+                    </div>
+                    <div class="piece-form-supplementary-form-textarea">
+                        <label for="rules">Règles</label>
+                        <textarea name="rules"></textarea>
+                    </div>
+                    <div class="piece-form-supplementary-form-color">
+                        <label for="color">Couleur</label>
+                        <input name="color" type="color"/>
+                    </div>
                 </div>
             </div>
-            <button mat-button><mat-icon fontIcon="add"></mat-icon></button>
         </div>
+        <button class="piece-form-supplementary-form-add" mat-button><mat-icon fontIcon="add"></mat-icon></button>
+
     </div>
 </div>
