re place supplementary-role color input

--- a/src/app/pieces/role/role.component.scss
+++ b/src/app/pieces/role/role.component.scss
@@ -358,8 +358,11 @@
                     margin-top: 10px;
 
                     label {
-                        margin-right: 5px;
-                        color: white;
+                        margin-right: 33px;
+                    }
+
+                    input {
+                        background-color: white;
                     }
                 }
 
