--- a/src/app/sider-pieces/role-occurence/role-occurence.component.html
+++ b/src/app/sider-pieces/role-occurence/role-occurence.component.html
@@ -2,21 +2,27 @@
     <div class="piece-form">
         <div class="piece-title">Occurrence du rôle</div>
         <div class="piece-form-occurrence">
-            <input type="text"/>
-            <label> entre </label>
-            <input type="text"/>
-            <label> et </label>
-            <input type="text"/>
-            <label> joueurs</label>
+            <div class="piece-form-occurrence-text">
+                <input type="text"/>
+                <label> entre </label>
+                <input type="text"/>
+                <label> et </label>
+                <input type="text"/>
+                <label> joueurs</label>  
+            </div>
+            <button mat-button><mat-icon fontIcon="remove"></mat-icon></button>
         </div>
         <div class="piece-form-occurrence">
-            <input type="text"/>
-            <label> entre </label>
-            <input type="text"/>
-            <label> et </label>
-            <input type="text"/>
-            <label> joueurs</label>
+            <div class="piece-form-occurrence-text">
+                <input type="text"/>
+                <label> entre </label>
+                <input type="text"/>
+                <label> et </label>
+                <input type="text"/>
+                <label> joueurs</label>  
+            </div>
+            <button mat-button><mat-icon fontIcon="remove"></mat-icon></button>
         </div>
-        <button mat-button><mat-icon fontIcon="add"></mat-icon></button>
+        <button mat-button class="piece-form-add"><mat-icon fontIcon="add"></mat-icon></button>
     </div>
 </div>
