--- a/src/app/sider-pieces/rules/rules.component.scss
+++ b/src/app/sider-pieces/rules/rules.component.scss
@@ -44,6 +44,13 @@
 
         &-ressources {
 
+            button {
+                position: relative;
+                left: 100%;
+                transform: translateX(-100%);
+                margin-top: 5px;
+            }
+
             input {
                 height: 30px;
                 border: none;
