--- a/src/app/pieces/role/role.component.scss
+++ b/src/app/pieces/role/role.component.scss
@@ -149,16 +149,16 @@
             }
         }
 
-        &-objective {
+        &-objectives {
             margin-top: 10px;
             display: flex;
             flex-direction: column;
 
             input {
-                margin-top: 5px;
+                width: 70%;
             }
 
-            button {
+            &-add {
                 position: relative;
                 width: 50px;
                 height: 50px;
@@ -172,6 +172,22 @@
                     transform: scale(1.3);
                 }
             }
+
+            &-objective {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                margin-top: 5px;
+
+                button {
+                    position: relative;
+                    width: 50px;
+                    height: 50px;
+                    background-color: white;
+                    border-radius: 10px;
+                    right: 0px;
+                }
+            }
         }
 
         &-rewards {
@@ -179,14 +195,9 @@
             flex-direction: column;
 
             button {
-                position: relative;
-                width: 50px;
                 height: 50px;
-                background-color: white;
-                left: 100%;
-                transform: translateX(-100%);
                 border-radius: 10px;
-                margin-bottom: 5px;
+                background-color: white;
 
                 mat-icon {
                     transform: scale(1.3);
@@ -229,17 +240,67 @@
                     }
                 }
 
+                &-quest {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+
+                    select {
+                        width: 80%;
+                    }
+                }
+
+                &-character {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+
+                    select {
+                        width: 80%;
+                    }
+                }
+
+                &-discussion {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+
+                    select {
+                        width: 80%;
+                    }
+                }
+
+                &-objective {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+
+                    select {
+                        width: 80%;
+                    }
+                }
+
                 &-objects {
                     display: flex;
                     flex-direction: column;
+
+                    &-add {
+                        position: relative;
+                        width: 50px;
+                        height: 50px;
+                        left: 100%;
+                        transform: translateX(-100%);
+                        margin-bottom: 5px;
+                    }
 
                     &-object {
                         display: flex;
                         flex-direction: row;
                         margin-bottom: 5px;
+                        justify-content: space-between;
 
                         input[type="text"] {
-                            margin-left: 5px;
+                            width: 50%;
                         }
                     }
                 }
@@ -247,14 +308,24 @@
                 &-skill {
                     display: flex;
                     flex-direction: row;
+                    justify-content: space-between;
 
                     select {
-                        margin-left: 5px;
+                        width: 55%;
+                    }
+                }
+
+                &-other {
+                    button {
+                        position: relative;
+                        left: 100%;
+                        transform: translateX(-100%);
+                        margin-top: 5px;
                     }
                 }
 
                 &-add {
-                    margin-top: 5px;
+                    margin-top: 10px;
 
                     button {
                         width: 100%;
@@ -315,18 +386,21 @@
                 background-color: white;
                 left: 100%;
                 transform: translateX(-100%);
-                margin-top: 5px;
                 border-radius: 10px;
 
                 mat-icon {
                     transform: scale(1.3);
                 }
             }
+
+            &-add {
+                margin-top: 10px;
+            }
         }
 
         &-supplementary {
             padding-bottom: 10px;
-            background: linear-gradient(304deg, rgb(2, 0, 36) 0%, rgb(2, 0, 36) 50%, #9ad5ec 50%, #9ad5ec 100%);
+            background: linear-gradient(302deg, rgb(2, 0, 36) 0%, rgb(2, 0, 36) 50%, #9ad5ec 50%, #9ad5ec 100%);
             width: 398px;
             position: relative;
             left: -34px;
@@ -335,6 +409,20 @@
                 width: 350px;
                 margin-left: 33px;
                 margin-right: 10px;
+
+                button {
+                    width: 50px;
+                    height: 50px;
+                    background-color: white;
+                    border-radius: 10px;
+                    left: 100%;
+                    transform: translateX(-100%);
+                    margin-top: 5px;
+                    
+                    mat-icon {
+                        transform: scale(1.3);
+                    }
+                }
 
                 &-name {
                     margin-top: 10px;
@@ -368,15 +456,12 @@
 
                 &-add {
                     position: relative;
-                    width: 50px;
+                    margin-top: 10px;
+                    margin-bottom: 10px;
                     height: 50px;
                     background-color: white;
-                    left: 100%;
-                    transform: translateX(-100%);
-                    margin-top: 10px;
                     border-radius: 10px;
-                    margin-bottom: 10px;
-
+                    
                     mat-icon {
                         transform: scale(1.3);
                     }
