--- a/src/app/sider-pieces/role-occurence/role-occurence.component.scss
+++ b/src/app/sider-pieces/role-occurence/role-occurence.component.scss
@@ -19,21 +19,33 @@
 
         input {
             width: 25px;
+            height: 20px;
             border: none;
             border-radius: 10px;
+            text-align: center;
             margin-left: 5px;
             margin-right: 5px;
         }
 
         button {
-            margin-top: 10px;
-            border: none;
             background-color: white;
             border-radius: 10px;
         }
 
-        &-occurence {
+        &-add {
+            margin-top: 10px;
+        }
+
+        &-occurrence {
             display: flex;
+            flex: row;
+            justify-content: space-between;
+            margin-top: 5px;
+
+            &-text {
+                display: flex;
+                flex-direction: row;
+            }
         }
     }
 }
