--- a/src/app/sider-pieces/rules/rules.component.html
+++ b/src/app/sider-pieces/rules/rules.component.html
@@ -15,7 +15,8 @@
                     <div class="piece-form-ressources-object-infos-quantity">
                         <label for="quantity">Quantité</label>
                         <input name="quantity" type="text"/>
-                    </div>                  
+                    </div>
+                    <button mat-button><mat-icon fontIcon="remove"></mat-icon></button>              
                 </div>
 
                 <div class="piece-form-ressources-object-infos">
@@ -26,7 +27,8 @@
                     <div class="piece-form-ressources-object-infos-quantity">
                         <label for="quantity">Quantité</label>
                         <input name="quantity" type="text"/>
-                    </div>                  
+                    </div>
+                    <button mat-button><mat-icon fontIcon="remove"></mat-icon></button>              
                 </div>
 
                 <button mat-button><mat-icon fontIcon="add"></mat-icon></button>
