change input for role-ressource-type by a select

--- a/src/app/pieces/role/role.component.html
+++ b/src/app/pieces/role/role.component.html
@@ -126,7 +126,10 @@
                 </div>
                 <div class="piece-form-ressources-ressource-quantity">
                     <label for="type">Type</label>
-                    <input name="type" type="text">
+                    <select name="type">
+                        <option value="1">Ressource / Objet</option>
+                        <option value="2">Attribut</option>
+                    </select>
                 </div>
                 <button mat-button><mat-icon fontIcon="remove"></mat-icon></button> 
             </div>
