--- a/src/app/pieces/game-educationnal-objective/game-educationnal-objective.component.html
+++ b/src/app/pieces/game-educationnal-objective/game-educationnal-objective.component.html
@@ -11,7 +11,7 @@
         <div class="piece-form-title">Objectif pédagogique</div>
         <div class="piece-form-objective">
             <label for="objective">Commun pour le jeu</label>
-            <textarea name="objective" placeholder="- Améliorer les softskills&#10;- Apprendre à coopérer"></textarea>
+            <textarea name="objective" [(ngModel)]="gameEducationnalObjective.objective" placeholder="- Améliorer les softskills&#10;- Apprendre à coopérer"></textarea>
         </div>
         <div class="piece-form-footer">Sorbonne Université, LIP6 - IMT Nord Europe</div>
     </div>
