--- a/src/app/pieces/educational-objective/educational-objective.component.html
+++ b/src/app/pieces/educational-objective/educational-objective.component.html
@@ -13,7 +13,7 @@
         <div class="piece-form-title">Objectif pédagogique</div>
         <div class="piece-form-objective">
             <label for="objective">Commun pour la mission 1</label>
-            <textarea name="objective" placeholder="Comprendre les rôles impliqués dans la conception d'un site web"></textarea>
+            <textarea name="objective" [(ngModel)]="educationnalObjective.objective" placeholder="Comprendre les rôles impliqués dans la conception d'un site web"></textarea>
         </div>
             
     </div>
